--- a/models/Makefile
+++ b/models/Makefile
@@ -14,7 +14,8 @@ TARGET_DEPS := \
 	$(OUTPUTDIR)/UMemory.o \
 	$(OUTPUTDIR)/TNetif.o \
 	$(OUTPUTDIR)/TRouter.o \
-	$(OUTPUTDIR)/THellfireProcessor.o
+	$(OUTPUTDIR)/THellfireProcessor.o \
+#$(OUTPUTDIR)/TArm7TDMI.o
 
 #compress all generated object files into a pack
 $(OUTPUTDIR)/$(LIBNAME): $(TARGET_DEPS)
