--- a/models/Makefile
+++ b/models/Makefile
@@ -4,7 +4,7 @@ OUTPUTDIR :=./bin
 LIBNAME :=libmod.a
 
 #include flags (plus external flags)
-CPPFLAGS :=-I./include -I../simulator/include -c $(COMPLINE)
+CPPFLAGS :=-I./include -I../simulator/include -c $(COMPLINE) $(GLOBAL_SETTINGS)
 
 #list of dependencies (source files)
 TARGET_DEPS := \
