(i) Added interruption handler to catch CTRL+C. Interrupted simulations now show statistics based on the amount of cycles executed until the interruption. (ii) Reworked API for orca-lib-client. (iii) Lib orca-lib-cliente removed added to CMakeList as an external libray. Now the lib must be compiled outside catkin environment before compiling ROS applications.

--- a/tools/orca-lib-client/Makefile
+++ b/tools/orca-lib-client/Makefile
@@ -1,13 +1,15 @@
-LIBNAME = orca-lib-client.a
+include ../../Configuration.mk
+
+LIBNAME = liborca-client.a
 SRCDIR  = ./src
 BINDIR  = ./bin
 INCDIR  = ./include
 
-CPPFLAGS = -O3 -g -Wall -Wextra -Werror -I$(INCDIR) -c
+CPPFLAGS = -O3 -g -Wall -Wextra -Werror -I$(INCDIR) -c $(COMPLINE)
 
 TRGTDEPS = \
-	$(BINDIR)/udp_client_server.o \
-	$(BINDIR)/orca-lib-client.o
+	$(BINDIR)/orca-network-base.o \
+	$(BINDIR)/orca-udp-client-server.o
 
 #compile all classes (.cpp) into %.o files
 $(BINDIR)/%.o: $(SRCDIR)/%.cpp 
