fixed cmd line for ld in platform/Makefile script, required by raspbian.

--- a/platforms/orca-generic/Makefile
+++ b/platforms/orca-generic/Makefile
@@ -19,7 +19,9 @@ LIBSIM:=$(LIBSIM_PATH)/bin/libsim.a
 GCC_FLAGS  :=-I$(LIBSIM_PATH)/include -I$(LIBMOD_PATH)/include \
     -Iinclude -lpthread $(COMPLINE) $(GLOBAL_SETTINGS)
 
-LD_FLAGS   :=-L../../bin -lmod -lsim
+#added -Wl,--allow-multiple-definition for possible bug in binutils/ld
+#as recommended in https://sourceware.org/bugzilla/show_bug.cgi?id=12762
+LD_FLAGS   :=-L../../bin -lmod -lsim -Wl,--allow-multiple-definition
 
 #source files for the platform
 TARGET_DEPS := \
