added stub for drone apps. changed platform configs to reflect new apps.

--- a/software/Makefile
+++ b/software/Makefile
@@ -45,7 +45,7 @@ CFLAGS += -DCPU_ARCH=$(CPU_ARCH) \
 	-DDEBUG_PORT
 
 NOC_FLAGS = -DNOC_INTERCONNECT -DNOC_PACKET_SIZE=64 -DNOC_PACKET_SLOTS=64 \
-	    -DNOC_WIDTH=4 -DNOC_HEIGHT=4
+	    -DNOC_WIDTH=$(ORCA_NOC_WIDTH) -DNOC_HEIGHT=$(ORCA_NOC_HEIGHT)
 
 image:
 	make hal
