Fixed misleading return type in several simulation pkg classes. Multitail script is generated automatically at each run. Non-application pkgs moved to software/extension folder. Added stub for orca-pubsub ext. Added header for each stage of software generation. Added an option to exclude extension from compilation in Configuration.mk.

--- a/software/Makefile
+++ b/software/Makefile
@@ -24,16 +24,14 @@ include $(HFOS_DIR)/lib/lib.mak
 include $(HFOS_DIR)/drivers/noc.mak
 include $(HFOS_DIR)/sys/kernel.mak
 
-#includes hardware-specific support
-include orca-lib/orca-lib.mak
-
 #include tasks 
 include $(HFOS_DIR)/../applications/*/app.mak
+include $(HFOS_DIR)/../extensions/*/ext.mak
 
 #phonies
 .PHONY: clean
 
-INC_DIRS += -I $(HFOS_DIR)/lib/include -I $(HFOS_DIR)/sys/include -I $(HFOS_DIR)/drivers/noc/include -I $(HFOS_DIR)/../orca-lib/include
+INC_DIRS += -I $(HFOS_DIR)/lib/include -I $(HFOS_DIR)/sys/include -I $(HFOS_DIR)/drivers/noc/include -I $(HFOS_DIR)/../extensions/orca-core/include
 
 CFLAGS += -DCPU_ARCH=$(CPU_ARCH) \
 	-DMAX_TASKS=$(MAX_TASKS) -DMEM_ALLOC=$(MEM_ALLOC) \
@@ -48,14 +46,28 @@ NOC_FLAGS = -DNOC_INTERCONNECT -DNOC_PACKET_SIZE=64 -DNOC_PACKET_SLOTS=64 \
 	    -DNOC_WIDTH=$(ORCA_NOC_WIDTH) -DNOC_HEIGHT=$(ORCA_NOC_HEIGHT)
 
 image:
+	@echo "$'\e[7m==================================\e[0m"
+	@echo "$'\e[7m  Making Kernel ...               \e[0m"
+	@echo "$'\e[7m==================================\e[0m"
 	make hal
 	make libc
 	make noc
 	make kernel
+	@echo "$'\e[7m==================================\e[0m"
+	@echo "$'\e[7m  Making Extensions ...           \e[0m"
+	@echo "$'\e[7m==================================\e[0m"
+	for ext in $(ORCA_EXTENSIONS) ; do \
+		make $$ext.o PACKAGE_NAME=$$ext PACKAGE_TYPE=extension; \
+	done
+	@echo "$'\e[7m==================================\e[0m"
+	@echo "$'\e[7m  Making Apps ...                 \e[0m"
+	@echo "$'\e[7m==================================\e[0m"		
 	for app in $(SELECTED_APPS) ; do \
 		make $$app.o ; \
 	done
-	make orca-lib.o
+	@echo "$'\e[7m==================================\e[0m"
+	@echo "$'\e[7m  Linking Software ...            \e[0m"
+	@echo "$'\e[7m==================================\e[0m"		
 	$(LD) $(LDFLAGS) -T$(LINKER_SCRIPT) -o $(IMAGE_NAME).elf *.o
 	$(DUMP) --disassemble --reloc $(IMAGE_NAME).elf > $(IMAGE_NAME).lst
 	$(DUMP) -h $(IMAGE_NAME).elf > $(IMAGE_NAME).sec
@@ -64,20 +76,6 @@ image:
 	$(SIZE) $(IMAGE_NAME).elf
 	hexdump -v -e '4/1 "%02x" "\n"' $(IMAGE_NAME).bin > $(IMAGE_NAME).txt
 	mv *.o *.elf *.bin *.cnt *.lst *.sec *.txt ../bin
-	
-#image_apps:
-#	for app in $(SELECTED_APPS) ; do \
-#		make $$app.o ; \
-#		$(LD) $(LDFLAGS) -T$(LINKER_SCRIPT) -o $$app.elf *.o -limage -L../bin ; \
-#		$(OBJ) $$app.elf $$app.elf --only-section=.tasks ; \
-#		$(DUMP) --disassemble --reloc $$app.elf > $$app.lst ; \
-#		$(DUMP) -h $$app.elf > $$app.sec ; \
-#		$(DUMP) -s $$app.elf > $$app.cnt ; \
-#		$(OBJ) -O binary $$app.elf $$app.bin ; \
-#		$(SIZE) $$app.elf ; \
-#		hexdump -v -e '4/1 "%02x" "\n"' $$app.bin > $$app.txt ; \
-#		mv $$app.o ../bin ; \
-#	done
 	
 clean:
 	rm -rf *.o *~ *.elf *.bin *.cnt *.lst *.sec *.txt
