transition commit, new dma/ni

--- a/models/Makefile
+++ b/models/Makefile
@@ -8,7 +8,7 @@ CPPFLAGS :=-I./include -I../simulator/include -c $(COMPLINE) $(GLOBAL_SETTINGS)
 
 #list of dependencies (source files)
 TARGET_DEPS := \
-	$(OUTPUTDIR)/TNetSocket.o \
+	$(OUTPUTDIR)/TNetBridge.o \
 	$(OUTPUTDIR)/USignal.o \
 	$(OUTPUTDIR)/UBuffer.o \
 	$(OUTPUTDIR)/UMemory.o \
