--- a/platforms/single-core/Makefile
+++ b/platforms/single-core/Makefile
@@ -9,6 +9,7 @@ LIBSIM_PATH:=../../simulator
 LIBMOD_PATH:=../../models
 OUTPUTDIR :=./bin
 SOURCEDIR :=./src
+HEADERDIR :=./include
 
 LIBMOD:=$(LIBMOD_PATH)/bin/libmod.a
 LIBSIM:=$(LIBSIM_PATH)/bin/libsim.a
@@ -29,12 +30,14 @@ TARGET_DEPS := \
 	$(SOURCEDIR)/ProcessingTile.cpp \
 	$(SOURCEDIR)/Orca.cpp
 
+# include headers in the dependecy check
+HEADER_FILES := $(wildcard $(HEADERDIR)/*.h)
+
 #compiler an instance of the simulator 
-$(OUTPUTDIR)/$(PLATFORM_NAME).exe: $(TARGET_DEPS)
+$(OUTPUTDIR)/$(PLATFORM_NAME).exe: $(TARGET_DEPS) $(HEADER_FILES)
 	g++ $(TARGET_DEPS) -o $(OUTPUTDIR)/$(PLATFORM_NAME).exe $(LD_FLAGS) $(GCC_FLAGS)
 
 #remove previously generated files
 clean:
 	rm -rf $(OUTPUTDIR)/$(PLATFORM_NAME).exe
-	
-	
+
