--- a/platforms/single-core/Makefile
+++ b/platforms/single-core/Makefile
@@ -35,9 +35,9 @@ HEADER_FILES := $(wildcard $(HEADERDIR)/*.h)
 
 #compiler an instance of the simulator 
 $(OUTPUTDIR)/$(PLATFORM_NAME).exe: $(LIBMOD) $(LIBSIM) $(TARGET_DEPS) $(HEADER_FILES)
-	g++ $(TARGET_DEPS) -o $(OUTPUTDIR)/$(PLATFORM_NAME).exe $(LD_FLAGS) $(GCC_FLAGS)
+	$(Q)g++ $(TARGET_DEPS) -o $(OUTPUTDIR)/$(PLATFORM_NAME).exe $(LD_FLAGS) $(GCC_FLAGS)
 
 #remove previously generated files
 clean:
-	rm -rf $(OUTPUTDIR)/$(PLATFORM_NAME).exe
+	$(Q)rm -rf $(OUTPUTDIR)/$(PLATFORM_NAME).exe
 
