--- a/tools/orca-remote-control/Makefile
+++ b/tools/orca-remote-control/Makefile
@@ -10,14 +10,14 @@ TRGTDEPS = \
 
 #compile all classes (.cpp) into %.o files
 $(BINDIR)/%.o: $(SRCDIR)/%.cpp 
-	g++ $(CPPFLAGS) $< -o $@ -c 
+	$(Q)g++ $(CPPFLAGS) $< -o $@ -c 
 
 #make application executable
 all: $(TRGTDEPS)
-	make -C ../orca-lib-client
-	cp ../orca-lib-client/bin/$(LIBORCA) $(BINDIR)
-	g++ $(BINDIR)/*.o $(BINDIR)/$(LIBORCA) -o $(BINDIR)/$(APPNAME).exe $(CPPFLAGS)
+	$(Q)make -C ../orca-lib-client
+	$(Q)cp ../orca-lib-client/bin/$(LIBORCA) $(BINDIR)
+	$(Q)g++ $(BINDIR)/*.o $(BINDIR)/$(LIBORCA) -o $(BINDIR)/$(APPNAME).exe $(CPPFLAGS)
 
 clean:
-	rm -rf ./bin/*.exe ./bin/*.o
+	$(Q)rm -rf ./bin/*.exe ./bin/*.o
 	
