--- a/platforms/orca-dma/Makefile
+++ b/platforms/orca-dma/Makefile
@@ -9,6 +9,7 @@ LIBSIM_PATH:=../../simulator
 LIBMOD_PATH:=../../models
 OUTPUTDIR :=./bin
 SOURCEDIR :=./src
+HEADERDIR :=./include
 
 LIBMOD:=$(LIBMOD_PATH)/bin/libmod.a
 LIBSIM:=$(LIBSIM_PATH)/bin/libsim.a
@@ -31,12 +32,15 @@ TARGET_DEPS := \
 	$(SOURCEDIR)/NetworkTile.cpp \
 	$(SOURCEDIR)/Orca.cpp
 
+# include headers in the dependecy check
+HEADER_FILES := $(wildcard $(HEADERDIR)/*.h)
+
 #compiler an instance of the simulator 
-$(OUTPUTDIR)/$(PLATFORM_NAME).exe: $(TARGET_DEPS)
-	g++ $(TARGET_DEPS) -o $(OUTPUTDIR)/$(PLATFORM_NAME).exe $(LD_FLAGS) $(GCC_FLAGS)
+$(OUTPUTDIR)/$(PLATFORM_NAME).exe: $(TARGET_DEPS) $(HEADER_FILES)
+	$(Q)g++ $(TARGET_DEPS) -o $(OUTPUTDIR)/$(PLATFORM_NAME).exe $(LD_FLAGS) $(GCC_FLAGS)
 
 #remove previously generated files
 clean:
-	rm -rf $(OUTPUTDIR)/$(PLATFORM_NAME).exe
+	$(Q)rm -rf $(OUTPUTDIR)/$(PLATFORM_NAME).exe
 	
 	
