including the memory mapped external multipliers: int and fp versions

--- a/models/Makefile
+++ b/models/Makefile
@@ -18,7 +18,8 @@ TARGET_DEPS := \
 	$(OUTPUTDIR)/UMemory.o \
 	$(OUTPUTDIR)/TRouter.o \
 	$(OUTPUTDIR)/THellfireProcessor.o \
-	$(OUTPUTDIR)/TDmaNetif.o
+	$(OUTPUTDIR)/TDmaNetif.o \
+	$(OUTPUTDIR)/UMult.o
 
 
 #$(OUTPUTDIR)/TDmaNetif.o
